Fixed spacing issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -149,7 +149,7 @@ p {
     font-family: $font-family-hero;
     font-size: $font-size-xxl;
     font-weight: 400;
-    margin-bottom: $spacing-sm;
+    margin-bottom: $spacing-md;
     position: relative;
     display: inline-block;
   }
@@ -167,7 +167,7 @@ p {
     color: $text-light;
     line-height: 1.5;
     font-weight: 400;
-    width: 70%;
+    width: 58%;
     margin: 0 auto;
     opacity: 0.8;
   }
